# xray-ecs-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  build.sh  cleanup.sh  deploy.sh  pyproject.toml
infra/1.ecr/: main.tf
infra/2.ecs/: data.tf  dynamo.tf  iam.tf  main.tf  variables.tf
