[tool.poetry]
name = "xray-play"
version = "0.1.0"
description = ""
authors = ["Konrad Zagozda <konrad.zagozda@grapeup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
aws-xray-sdk = "^2.12.1"
boto3 = "^1.34.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
