[tool.poetry]
name = "xray-play"
version = "0.1.0"
description = ""
authors = ["Konrad Zagozda <konrad.zagozda@grapeup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
alembic = "^1.13.1"
boto3 = "^1.34.31"
flask = "<3"
flask-cors = "^4.0.0"
flask-restx = "^1.3.0"
marshmallow = "^3.20.2"
psycopg2 = "^2.9.9"
pyjwt = "^2.8.0"
sqlalchemy = "<2"
flask-migrate = "^4.0.5"
flask-sqlalchemy = "3.0.5"
werkzeug = "<3"
aws-xray-sdk = "^2.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
